# TritonFuzz

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tritonfuzz/: __init__.py  cli.py  config.py  driver.py  fuzzer.py  oracle.py  reducer.py  runtime.py  target.py
src/tritonfuzz/generator/: __init__.py  builder.py  core.py  ops.py  symbol_table.py  types.py
